# qenetex

./: README.md  docker-compose.yml
test-qenetex-api/: .env  Dockerfile  pyproject.toml
test-qenetex-api/api/: config.py  extensions.py  logger.py  main.py  routes.py  utils.py
test-qenetex-api/api/transactions/: helpers.py  router.py  schemas.py  views.py
test-qenetex-api/api/users/: helpers.py  router.py  schemas.py  views.py
test-qenetex-api/db/: .env  models.py  utils.py
test-qenetex-api/db/alembic/: env.py
test-qenetex-api/db/alembic/versions/: b7fa85a0f641_first_migration.py
test-qenetex-front/: Dockerfile  package-lock.json  package.json
test-qenetex-front/src/: App.tsx  routes.tsx
test-qenetex-front/src/@types/: global.d.ts  transactions.ts
test-qenetex-front/src/components/SideBar/: index.tsx
test-qenetex-front/src/pages/Addresses/: index.tsx
test-qenetex-front/src/pages/Transactions/: index.tsx
test-qenetex-front/src/redux/: index.ts  saga.ts
test-qenetex-front/src/redux/transactions/: actions.ts  requests.ts  sagas.ts  slice.ts
